修改一个字

--- a/learn/搭建自己的博客系统.md
+++ b/learn/搭建自己的博客系统.md
@@ -37,7 +37,7 @@ Vue.component('my-component', {
 ```
 <my-component></my-component>
 ```
-简单使用还是成本很低的，以后有时间再细学
+简单使用成本还是很低的，以后有时间再细学
 
 ## 关于后端
 直接下个springboot的官方示例代码，在这个基础上写。为了快速出来一个成品，许多功能先简化，以后博客系统能够正常运行后再慢慢优化。具体代码就不贴了。
